--- a/Paper.tex
+++ b/Paper.tex
@@ -68,7 +68,8 @@
 \institute{
 	Department of Computing Science \\
 	Umeå University, Sweden \\
-	\email{id11ahh@cs.umu.se}
+	\email{albin.hubsch@gmail.com} \\
+	\url{http://albinhubsch.se}
 }
 
 \maketitle
@@ -90,12 +91,12 @@ This study aims to investigate if it is possible to receive better user performa
 \section{Introduction}
 The main goal with this paper is to evaluate if color contrast has a significant impact on usability in web based smart-phone applications. Consumer touch screen devices such as smart-phones have rapidly increased in amount and availability recent years. The touch screen technology have made great advances~\cite{jennings2013touch} and it is frequently used as a way of receiving user input. When this technology moves to a broader audience, higher demands on usability needs to be set~\cite{gong2004guidelines}. To further explore how usability can be improved using touch screen technology we have in this paper investigated if reaction time (the time it takes for a user to react on instructions, further referred to as RT in this paper) and user input errors (the number of user input errors when interacting with a system, further referred to as UIE in this paper) can reach better results by increasing color contrast within the interface. Better results are assumed as faster RTs and less number of UIEs. 
 
-Earlier studies completed in this field has explored how we perceive different color contrast and how it can affect our reading performance~\cite{wu2003improving}. It has also been proved that chromaticity, contrast, and cone opponency in color space can affect RTs~\cite{mckeefry2003simple}. Many best practices for Mobile development have also shown that "requirements for sufficient color contrast"~\cite{marcus2013design} must be met to best exaggerate the content. Still the question remains, can a high color contrast interface increase the the RT and decrease UIE?
+Earlier studies completed in this field has explored how we perceive different color contrast and how it can affect our reading performance~\cite{wu2003improving}. It has also been proved that chromaticity, contrast, and cone opponency in color space can affect RTs~\cite{mckeefry2003simple}. Many best practices for Mobile development have also shown that "requirements for sufficient color contrast"~\cite{marcus2013design} must be met to best exaggerate the content. Still the question remains, can a high color contrast interface increase the the reaction time and decrease the amount of user input errors?
 
-High RTs and low user IE are especially desirable when designing user interfaces for situations with high demands on quick user input and low error tolerance such as in emergency situations. The results of this paper can be used by any designer or developer.
+High RTs and low UIEs are especially desirable when designing user interfaces for situations with high demands on quick user input and low error tolerance such as in emergency situations. The results of this paper can be used by any designer or developer.
 
 \section{Method}
-In order to be able to test if color contrast has a substantial impact on the RT and UIE of a touch screen user interface we have designed a simple web application for an Android smart-phone. The application exists in two versions, one with low color contrast (referred to as LCC in this paper) and one with high color contrast (referred to as HCC in this paper) as can be seen in Fig~\ref{fig:application}. We conducted an A/B test to measure the performance between the versions.
+In order to be able to test if color contrast has a substantial impact on the RT and UIE of a touch screen user interface we have designed a simple web application for an Android smart-phone. The application exists in two versions, one with low color contrast (referred to as LCC in this paper) and one with high color contrast (referred to as HCC in this paper) interface as can be seen in Fig~\ref{fig:application}. We conducted an A/B test to measure the performance between the versions.
 
 \begin{figure}
 	\centering
@@ -120,18 +121,18 @@ To be able to give the test persons consistent instructions through the complete
 \end{figure}
 The instructions were a series of 20 instructions with shapes identical to the ones in the application buttons. The test persons were told to press the representative shape in the application as fast as they could in order to measure the reaction time. If they pressed the wrong button they were told to continue the test by pressing the right button, the application registered this as an UIE. Each test was performed indoors with varying surroundings such as different lightning conditions and noise levels. 
 
-We tested each version of the application on 5 persons, all within the same age group (20-30) and with a variety of backgrounds. In total we got 10 test results with a gender split of 50\% women and 50\% men that we later grouped into LCC and HCC. We analyzed them against each other to measure if any differences in RT or UIE between the two versions could be statistically confirmed.
+We tested each version of the application on 5 persons, all within the same age group (20-30) and with a variety of backgrounds. In total we got 10 test results with a gender split of 50\% women and 50\% men that grouped into LCC and HCC. We analyzed them against each other to measure if any differences in RT or UIE between the two versions could be statistically confirmed.
 
 \subsection{Evaluation of the A/B test}
-Our data received from the tests consisted of UNIX timestamps\footnote{More info at: \url{http://www.unixtimestamp.com/}} measured in milliseconds. Each time the user interacted with the application it registered which button that was pressed and saved it together with a UNIX timestamp. Equally, every time the instruction program showed a new symbol it logged the symbol together with a UNIX timestamp. As a result we received two data sets of symbols with corresponding timestamps for each test person, resulting in a total of 200 records. Although the data was hard to interpret due to its compact look, a python script was written to structure the resulting timestamps into a more readable format. We calculated each RT by subtracting the timestamp when the instruction was given from the registered user input timestamp. Out of this we could calculate the mean RT for both groups LCC and HCC. The calculation of RT did not take in consideration if user input was a no match. It was still considered as an reaction.
+Our data received from the tests consisted of UNIX timestamps\footnote{More info at: \url{http://www.unixtimestamp.com/}} measured in milliseconds. Each time the user interacted with the application it registered which button that was pressed and saved it together with a UNIX timestamp. Equally, every time the instruction program showed a new symbol it logged the symbol together with a UNIX timestamp. As a result we received two data sets of symbols with corresponding timestamps for each test person, resulting in a total of 200 records. Although the data was hard to interpret due to its compact look, a python script was written to structure the resulting timestamps into a more readable format. We calculated each RT by subtracting the timestamp when the instruction was given from the registered user input timestamp. Out of this we could calculate the mean RT for both groups LCC and HCC. The calculation of RT did not take in consideration if user input was a match with the instruction or not. It was still considered as an reaction.
 
-UIEs were counted every time the user pressed a non matching object compared to the one given in the instructions. All IEs in each group, LCC and HCC, were counted to see if one of the groups produced more UIEs.
+UIEs were counted every time the user pressed a non matching object compared to the one given in the instructions. All input errors in each group, LCC and HCC, were counted to see if one of the groups produced more UIEs.
 
 \section{Result}
 From our results we can not draw any statistically significant differences in reaction time between the two groups high color contrast and low color contrast. This is most probably due to corrupt test data, a result from limitations in web application technology, see section \ref{sec:discussion}. With user input errors we found that the low color contrast group produced significantly more user input errors than the hight color contrast group.
 
 \subsection{Reaction Times (RT)}
-Table~\ref{tab:groupRT} shows our average RT and standard deviation for each group. According to the results people in HCC had insignificant slower RTs compared to the ones in LCC.
+Table~\ref{tab:groupRT} shows our average reaction time and standard deviation for each group. According to the results people in the high color contrast group had insignificant slower reaction times compared to the ones in the low color contrast group.
 
 \begin{table}[]
 	\centering
@@ -139,14 +140,14 @@ Table~\ref{tab:groupRT} shows our average RT and standard deviation for each gro
 	\setlength\extrarowheight{1em}
 	\begin{tabular}{l|l|l}
 		\textbf{} & \textbf{Average RT} & \textbf{Standard Deviation} \\ \hline
-		\textbf{HC} & 783 ms & 969 ms \\ \hline
-		\textbf{LC} & 550 ms & 1393 ms
+		\textbf{HCC} & 783 ms & 969 ms \\ \hline
+		\textbf{LCC} & 550 ms & 1393 ms
 	\end{tabular}
 	\caption{Average reaction time and standard deviation for each group, low color contrast and high color contrast. A two tailed t-test was performed on the two groups and showed that no significant difference could be determined between them.
 	\label{tab:groupRT}}
 \end{table}
 
-To validate that the groups RTs are insignificantly different we assumed the two data sets where normal distributed based on the n>30 rule, and performed a two tailed T-Test. The T-Test produced a p-value of 0.17 which is bigger than a desired error margin ($\alpha$) of 5\%. The T-Test is therefore proving that no differences in RT exists within our data. Regardless what the t-test says our standard deviations are indicating that something might be wrong with our data (see section \ref{sec:discussion}).
+To validate that the groups RTs are insignificantly different we assumed the two data sets where normal distributed based on the n>30 rule, and performed a two tailed t-test. The test produced a p-value of 0.17 which is bigger than a desired error margin ($\alpha$) of 5\%. The t-test is therefore proving that no differences in RT exists within our data. Regardless what the t-test says our standard deviations are indicating that something might be wrong with our data (see section \ref{sec:discussion}).
 
 \subsection{Input Errors (IE)}
 None of the groups where completely free from user input errors. As can be seen in table~\ref{tab:userIE}, users that were given the LCC interface produced 475\% more UIE than the HCC group.
@@ -157,22 +158,24 @@ None of the groups where completely free from user input errors. As can be seen 
 	\setlength\extrarowheight{1em}
 	\begin{tabular}{l|l|l|l}
 		\textbf{} & \textbf{Errors} & \textbf{Standard Deviation} & \textbf{Errors/User} \\ \hline
-		\textbf{HC} & 4 & 1.10 & 0.8 \\ \hline
-		\textbf{LC} & 19 & 3.49 & 3.8
+		\textbf{HCC} & 4 & 1.10 & 0.8 \\ \hline
+		\textbf{LCC} & 19 & 3.49 & 3.8
 	\end{tabular}
-	\caption{Number of user input errors registered in each group and a calculation of IEs per user in each group. The low color contrast interface produced 475\% more UIE compared to the high color contrast version. A two tailed t-test also showed that there is a significant difference between the two versions. A high color contrast interface can therefore be a preferred design method if a low amount of user input errors is desired.
+	\caption{Number of user input errors registered in each group and a calculation of input errors per user in each group. The low color contrast interface produced 475\% more input errors compared to the high color contrast version. A two tailed t-test also showed that there is a significant difference between the two versions. A high color contrast interface can therefore be a preferred design method if a low amount of user input error is desired.
 	\label{tab:userIE}}
 \end{table}
 
 Table~\ref{tab:userIE} shows us that the users in the HCC group generally had a more stable and consistent performance compared to the LCC group. We also performed a two tailed t-test on the UIE data set. The outcome of this test was a p-value of 0.001 which is significantly smaller than a $\alpha$ of 5\% telling us that the HCC group performed better.
 
 \section{Discussion}\label{sec:discussion}
-Our test results have shown that we can not increase the user reaction time by using a high color contrast interface when using a smart phone web based application. However we could see that the high color contrast interface was more reliable in performance when it comes to the amount of user input errors, according to our results. What we have seen in our collected test data can strongly negotiate the legibility of the results. The calculated standard deviations gave us hints on that something was wrong. We dug deeper into each test persons results and found that the data must be corrupt. We found that we had randomly received negative RTs which in theory should be completely impossible. We were prepared that the timestamps could be off sync due to individual system clocks and no boot pairing. This would have resulted in a consistent off sync. Instead we got inconsistent hick ups in our timestamps. We suspect this is a result from either hardware limitations or limitations in the JavaScript\footnote{A prototype based dynamic scripting language} engine for web applications on Android.
+Our test results have shown that we can not increase the user reaction time by using a high color contrast interface when using a smart phone web based application. However we could see that the high color contrast interface was more reliable in performance when it comes to the amount of user input errors, according to our results. 
 
-Our conclusion is that HCC interfaces are the preferred method to design interfaces as they deliver a more stable user interaction pattern. Apart from this, smart phone web based applications should only be used if sometimes slow technology, user input errors and long reaction times from the user can be accepted.
+What we have seen in our collected test data can strongly negotiate the legibility of the results. The calculated standard deviations gave us hints on that something was wrong. We dug deeper into each test persons results and found that the data must be corrupt. We found that we had randomly received negative RTs which in theory should be completely impossible. We were prepared that the timestamps could be off sync due to individual system clocks and no boot up pairing. However this would only have resulted in a consistent off sync. Instead we got inconsistent hick ups in our timestamps. We suspect this is a result from either hardware limitations or limitations in the JavaScript\footnote{A prototype based dynamic scripting language} engine for web applications on Android.
+
+Our conclusion is that HCC interfaces are the preferred method to design interfaces as they deliver a more stable user interaction pattern. Apart from this, smart phone web based applications should only be used if sometimes slow technology, user input errors and long reaction times from the users can be accepted.
 
 \subsection{Drawbacks and Limitations}\label{subsec:drawbacks}
-The main drawback of this study is the corrupt data set. Something to have in mind when we draw any conclusions out of the results. This problem could be solved by simply rerunning the whole test using a native smart phone application instead of a web based solution.
+The main drawback of this study is the corrupt data set. This has to be in mind when we draw any conclusions out of the results. The problem could most probably be solved by simply rerunning the complete test using a native smart phone application instead of a web based solution.
 
 Each test person performed only one test with a supervisory selected interface, the LCC or HCC version. To eliminate possible affecting surrounding factors each person should have done the test several times and with both the LCC and HCC interfaces. This would also have made it possible to recognize if the test persons memorized the patterns in any way.
 
@@ -189,7 +192,7 @@ We do have some concrete suggestions that could be case for future work.
 \begin{itemize}
 	\item Perform tests using a native application.
 	\item Extend the test group with more test subjects. It is possible to think that the patterns that slightly appeared in our results will appear even more significant with a larger group of test subjects.
-	\item Our collected test data can be downloaded and used freely to investigate other aspects not mentioned in this paper. One proposal is to look at the different shapes and try to detect possible error patterns between them. Is the rhomb more frequently a case for IE compared to the other shapes?
+	\item Our collected test data can be downloaded\footnote{Download here~\url{https://goo.gl/x8URSB}} and used freely to investigate other aspects not mentioned in this paper. One proposal is to look at the different shapes and try to detect possible error patterns between them. Is the rhomb more frequently a case for IE compared to the other shapes?
 	\item Do our results apply on other systems and techniques? Our tests are limited to the Android system and a web based application solution. It remains to answer if our results applies on all other systems. This is also a way of isolating some of the affecting parameters mentioned in~\ref{subsec:drawbacks}.
 \end{itemize}
 
