--- a/Paper_revised.tex
+++ b/Paper_revised.tex
@@ -91,7 +91,7 @@ This study aims to investigate if it is possible to receive better user performa
 \section{Introduction}
 The main goal with this paper is to evaluate if color contrast has a significant impact on usability in web based smart-phone applications. Consumer touch screen devices such as smart-phones have rapidly increased in number and availability recent years. The touch screen technology has made great advances~\cite{jennings2013touch} and it is frequently used as a way of receiving user input. When this technology moves to a broader audience, higher demands on usability needs to be set~\cite{gong2004guidelines}. To further explore how usability can be improved using touch screen technology we have in this paper investigated if reaction time (the time it takes for a user to react on instructions, further referred to as RT in this paper) and user input errors (the number of user input errors when interacting with a system, further referred to as UIE in this paper) can reach better results by increasing color contrast within the interface. With "better results" we mean fewer UIEs and faster RTs. Increased number of user input errors means that users repeatedly presses the wrong buttons which tells us that it is hard to accomplish desired tasks. Faster reaction times does not necessarily mean "better", but in this experiment we had tasks that should be performed as fast as possible which led us to the conclusion, faster reaction times are "better".
 
-Contrast is determined by the difference in color and brightness of an object and objects within the same field of view. High contrast is the degree of difference between dark and light approaches the maximum possible difference. Low contrast is the opposite. 
+Contrast is determined by the difference in color and brightness of an object and objects within the same field of view. High contrast is the degree of difference between dark and light when it approaches the maximum possible difference. Low contrast is the opposite, low difference between dark light.
 
 Earlier studies completed in this field have explored how we perceive different color contrast and how it can affect our reading performance~\cite{wu2003improving}. It has also been proved that chromaticity, contrast, and cone opponency in color space can affect RTs~\cite{mckeefry2003simple}. Many best practices for mobile development have also shown that "requirements for sufficient color contrast"~\cite{marcus2013design} must be met to best amplify the content. Still the question remains, can a high color contrast interface increase the the reaction time and decrease the amount of user input errors?
 
